// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CityNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="text_city"
      >
        Miasto
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        label="Miasto"
        name="text_city"
        placeholder="Miasto"
        value="$%Wars_aw"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<CityNameField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  label="Miasto"
  name="text_city"
  placeholder="Miasto"
  value=""
/>
`;

exports[`<CityNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="text_city"
      >
        CityName*
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        label="CityName"
        name="text_city"
        placeholder="Miasto*"
        required=""
        value=""
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CityNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="text_city"
      >
        City
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="City"
        name="text_city"
        placeholder="Miasto"
        value=""
      />
    </div>
  </form>
</div>
`;
